# rtype

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README  README.md  checker  conanfile.txt  flake.nix  waveConfig.json
Client/: CMakeLists.txt  conanfile.txt
Client/src/: app.cpp  app.hpp  main.cpp
Client/src/callbacks/: callbacks.hpp  on_connect.cpp  on_disconnect.cpp  on_message.cpp
Client/src/components/: animations.hpp  me.hpp  sound.hpp  sprite.hpp  target_pos.hpp  zindex.hpp
Client/src/gui/: assetManager.cpp  assetManager.hpp  button.cpp  button.hpp  texture.hpp
Client/src/handlers/: handle_destroy.cpp  handle_join_ack.cpp  handle_spawn.cpp  handle_update_entity_state.cpp  handle_update_game_state.cpp  handle_update_health.cpp  handle_update_position.cpp  handle_world_init.cpp  handlers.hpp
Client/src/systems/: IO.cpp  IO.hpp  Menus.cpp  Menus.hpp  animationSystem.cpp  animationSystem.hpp  interpolation.cpp  interpolation.hpp  network.cpp  network.hpp  renderer.cpp  renderer.hpp
Server/: CMakeLists.txt
Server/src/: app.cpp  app.hpp  main.cpp
Server/src/callbacks/: callbacks.hpp  on_connect.cpp  on_disconnect.cpp  on_message.cpp
Server/src/handlers/: handle_user_input.cpp  handlers.hpp
Server/src/level_director/: archetype.hpp  level_director.cpp  level_director.hpp  level_director_utils.cpp
Server/src/lobby/: lobby.cpp  lobby.hpp  lobby_manager.cpp  lobby_manager.hpp
Server/src/systems/: apply_bullet_movement.cpp  apply_bullet_movement.hpp  apply_enemy_movement.cpp  apply_enemy_movement.hpp  apply_movement.cpp  apply_movement.hpp  broadcast_dead_entities.cpp  broadcast_dead_entities.hpp  broadcast_updated_movements.cpp  broadcast_updated_movements.hpp
lib/cli_parser/: CMakeLists.txt
lib/cli_parser/include/: cli_parser.hpp  flag.hpp
lib/cli_parser/src/: cli_parser.cpp  flag.cpp
lib/cli_parser/tests/: CMakeLists.txt  Main.cpp
lib/cli_parser/tests/tests/: Initialization.cpp  cli_parsing.cpp  cli_types.cpp
lib/rtecs/: CMakeLists.txt  README.md
lib/rtecs/include/: ASystem.hpp  DynamicBitSet.hpp  ECS.hpp  ISparseSet.hpp  SparseSet.h  SparseSet.hpp  SparseVectorView.hpp  View.hpp  rtecs.h
lib/rtecs/include/rtecs/: ECS.hpp  rtecs.h  rtecs.hpp  types.h  types.hpp
lib/rtecs/include/rtecs/bitset/: DynamicBitSet.hpp
lib/rtecs/include/rtecs/exceptions/: BaseException.hpp  ComponentAlreadyExists.hpp  EntityNotFoundException.hpp  UnknowComponentException.hpp
lib/rtecs/include/rtecs/sparse/: ISparseSet.hpp  SparseSet.hpp  SparseVectorView.hpp  View.hpp
lib/rtecs/include/rtecs/sparse/group/: SparseGroup.hpp
lib/rtecs/include/rtecs/sparse/set/: ASparseSet.hpp  ISparseSet.hpp  SparseSet.hpp
lib/rtecs/include/rtecs/sparse/view/: SparseView.hpp  View.hpp
lib/rtecs/include/rtecs/systems/: ASystem.hpp  ISystem.hpp  SystemWrapper.hpp
lib/rtecs/include/rtecs/types/: types.hpp
lib/rtecs/src/: ECS.cpp  rtecs.cpp
lib/rtecs/src/bitset/: DynamicBitSet.cpp
lib/rtecs/src/exceptions/: BaseException.cpp  ComponentAlreadyExists.cpp  EntityNotFoundException.cpp  UnknowComponentException.cpp
lib/rtecs/src/internal/: DynamicBitSet.cpp
lib/rtecs/src/sparse/set/: ASparseSet.cpp
lib/rtecs/src/systems/: ASystem.cpp  SystemWrapper.cpp
lib/rtecs/tests/: CMakeLists.txt  Main.cpp  Tests.h
lib/rtecs/tests/tests/: Initialization.cpp  SparseSet.cpp
lib/rtecs/tests/tests/bitset/DynamicBitSet/: basics.cpp  binary_operations.cpp  bitshift.cpp
lib/rtecs/tests/tests/ecs/: ECS.cpp
lib/rtecs/tests/tests/ecs/fixtures/: ECSFixture.cpp  (+1 more)
lib/rtecs/tests/tests/fixtures/: ComponentFixture.cpp  ComponentFixture.hpp
lib/rtecs/tests/tests/sparse/: SparseGroup.cpp  SparseSet.cpp  SparseVectorView.cpp  SparseView.cpp
lib/rteng/: CMakeLists.txt  conanfile.txt
lib/rteng/include/: Behaviour.hpp  EntityContent.hpp  Graphics.hpp  MonoBehaviour.hpp  Renderer.hpp  behaviour.hpp  monoBehaviour.hpp  rteng.h  rteng.hpp  spawnFactory.hpp
lib/rteng/include/comp/: Behaviour.hpp  IO.hpp  Sprite.hpp  Transform.hpp  position.hpp  rect.hpp
lib/rteng/src/: Renderer.cpp  rteng.cpp
lib/rteng/src/Renderer/: Renderer.cpp
lib/rteng/src/comp/: Behaviour.hpp  Transform.hpp
lib/rteng/src/handlers/client_side/: handle_spawn.cpp  handle_update_position.cpp  handle_world_init.cpp  handlers.hpp
lib/rteng/src/handlers/server/: handle_user_input.cpp  handlers.hpp
lib/rteng/src/sys/: IO.cpp  IO.hpp  Sprite.cpp  Sprite.hpp  rectangle.cpp  rectangle.hpp
lib/rteng/tests/: CMakeLists.txt  Main.cpp  Tests.h
lib/rteng/tests/tests/: Initialization.cpp  TestEnvironment.hpp  TextureTests.cpp  getEntityInfos.cpp
lib/rtnt/: CMakeLists.txt  README.md  conanfile.txt
lib/rtnt/include/: rtnt.h
lib/rtnt/include/rtnt/: Constants.hpp
lib/rtnt/include/rtnt/Common/: Constants.hpp  Utils.hpp  constants.hpp  utils.hpp
lib/rtnt/include/rtnt/Core/: Client.hpp  Dispatcher.hpp  InternalPackets.hpp  Packet.hpp  Peer.hpp  Server.hpp  Session.hpp  client.hpp  dispatcher.hpp  packet.hpp  peer.hpp  server.hpp  session.hpp
lib/rtnt/include/rtnt/common/: constants.hpp  thread_safe_queue.hpp  utils.hpp
lib/rtnt/include/rtnt/core/: client.hpp  dispatcher.hpp  packet.hpp  peer.hpp  server.hpp  session.hpp
lib/rtnt/include/rtnt/stat/: metrics.hpp  recorder.hpp
lib/rtnt/src/: rtnt.cpp
lib/rtnt/src/Common/: Utils.cpp  utils.cpp
lib/rtnt/src/Core/: Client.cpp  Dispatcher.cpp  Packet.cpp  Peer.cpp  Server.cpp  Session.cpp  client.cpp  dispatcher.cpp  packet.cpp  peer.cpp  server.cpp  session.cpp
lib/rtnt/src/common/: utils.cpp
lib/rtnt/src/core/: client.cpp  dispatcher.cpp  packet.cpp  peer.cpp  server.cpp  session.cpp
lib/rtnt/src/stat/: recorder.cpp
lib/rtnt/tests/: CMakeLists.txt  Tests.h  main.cpp  tests.h
lib/rtnt/tests/tests/: Echo.cpp  Handshake.cpp  Initialization.cpp  broadcast.cpp  channel_independency.cpp  complex_packet.cpp  disconnect.cpp  empty_packet.cpp  handshake.cpp  network_fixture.hpp  order.cpp  packet_loss.cpp  reconnection.cpp  stats.cpp  string_packet.cpp  struct_packet.cpp  vector_packet.cpp
tests/: CMakeLists.txt  test_example.cpp
(+84 files in other folders)
